# pkg_rpc

./: CMakeLists.txt  Readme.md  pkg_rpcConfig.cmake.in  pkg_rpcConfigVersion.cmake.in
cmake/: pkg_rpcConfig.cmake  stub_generation.cmake
cmake/modules/: FindJsonStubGenerator.cmake
doc/: CMakeLists.txt  run_doxygen.cmake.in
src/: CMakeLists.txt  rpc_pkg.h
src/rpc_pkg/: CMakeLists.txt  json_rpc.h  rpc_object_registry.h  rpc_server.h
src/rpc_pkg/http/: http_rpc_server.cpp  http_rpc_server.h  json_http_rpc.cpp  json_http_rpc.h  threaded_http_server.cpp  threaded_http_server.h
src/rpc_pkg/impl/: json_rpc.cpp  rpc_lock_helper.h  rpc_object_registry.cpp  url.cpp  url.h
src/stubgenerator/: CMakeLists.txt  commandline.cpp  commandline.h  parserhelper.cpp  parserhelper.h  stubgeneratorfactory.cpp
test/: CMakeLists.txt
test/function/common/: CMakeLists.txt
test/private/install_complete/: reference.yaml
test/rpc/files/: adtf_system_intf.h
test/rpc/src/: CMakeLists.txt  tester_pkg_rpc.cpp
